# Law

./: .gitignore  README.md  กฎกระทรวงยกเว้นค่าธรรมเนียมการใช้ยานยนตร์บนทางหลวงพิเศษหมายเลข 7 และทางหลวงพิเศษหมายเลข 9 ภายในระยะเวลาที่กำหนด พ.ศ. 2567.txt  พระราชบัญญัติ  กำหนดค่าธรรมเนียมการใช้ยานยนตร์บนทางหลวงและสะพาน  พ.ศ. ๒๔๙๗.txt  พระราชบัญญัติว่าด้วยการปรับเป็นพินัย พ.ศ. 2565.txt
applied/fastapi/: main.py  pyproject.toml
applied/frontend/: package-lock.json  package.json
applied/frontend/src/: App.js  QueryForm.js
applied/scr/: createdb.py  retrieve.py
applied/vectordb0.bin/: index.faiss  index.pkl
applied/vectordb1.bin/: index.faiss  index.pkl
applied/vectordb2.bin/: index.faiss  index.pkl
data/: กฎกระทรวงยกเว้นค่าธรรมเนียมการใช้ยานยนตร์บนทางหลวงพิเศษหมายเลข 7 และทางหลวงพิเศษหมายเลข 9 ภายในระยะเวลาที่กำหนด พ.ศ. 2567.txt  พระราชบัญญัติว่าด้วยการปรับเป็นพินัย พ.ศ. 2565.txt
กฎหมาย/พระราชบัญญัติ/: พระราชบัญญัติกำหนดค่าธรรมเนียมการใช้ยานยนตร์บนทางหลวงและสะพาน พ.ศ. 2497.json
