[tool.poetry]
name = "LawDiff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.11"
langchain-huggingface = "^0.0.3"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
sentence-transformers = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
